--- a/.github/workflows/xplane_pull_request.yaml
+++ b/.github/workflows/xplane_pull_request.yaml
@@ -48,7 +48,9 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Setup the Crossplane CLI
-        run: "curl -sL https://raw.githubusercontent.com/crossplane/crossplane/master/install.sh | sh"
+        run: |
+          curl -sL https://raw.githubusercontent.com/crossplane/crossplane/master/install.sh | sh
+          sudo mv crossplane /usr/local/bin/
 
       - name: Prepare for packaging
         working-directory: ${{ inputs.CROSSPLANE_PACKAGES_DIR }}
@@ -62,7 +64,7 @@ jobs:
           echo "Building package for ${{ inputs.SUBPATH }}"
           # Create package directory if it doesn't exist
           mkdir -p ${{ inputs.SUBPATH }}/package
-          ../crossplane xpkg build --package-root=${{ inputs.SUBPATH }}/configuration -o ${{ inputs.SUBPATH }}/package/${{ inputs.SUBPATH }}-${{ inputs.NEXT_VERSION }}.xpkg
+          crossplane xpkg build --package-root=${{ inputs.SUBPATH }}/configuration -o ${{ inputs.SUBPATH }}/package/${{ inputs.SUBPATH }}-${{ inputs.NEXT_VERSION }}.xpkg
 
       - name: Upload Package
         uses: actions/upload-artifact@v4
