--- a/crossplane-packages/secret-syncer/compositions/secret-syncer-kcl-version/resources/composition.yaml
+++ b/crossplane-packages/secret-syncer/compositions/secret-syncer-kcl-version/resources/composition.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: infitx.org/v1alpha1
-    kind: XSecretSyncer
+    kind: SecretSyncer
   mode: Pipeline
   pipeline:
 
