--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -194,6 +194,9 @@ spec:
 
           - name: "object_storage_provider"
             value: "${ARGOCD_ENV_gitlab_pre_object_storage_provider}"
+
+          - name: "storage_namespace"
+            value: "${ARGOCD_ENV_utils_storage_namespace}"
     #main gitlab db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
@@ -417,3 +420,14 @@ spec:
 
           - name: "capi_cluster_namespace"
             value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
+      path: gitops/applications/overlays/object_storage_provider/${ARGOCD_ENV_gitlab_pre_object_storage_provider}/gitlab-pre
+      plugin:
+        name: envsubst
+        env:
+          - name: "storage_namespace"
+            value: "${ARGOCD_ENV_utils_storage_namespace}"
+
+          - name: "cloud_region"
+            value: "${ARGOCD_ENV_gitlab_pre_object_storage_region}"
