--- a/gitops/argo-apps/base/gitlab.yaml
+++ b/gitops/argo-apps/base/gitlab.yaml
@@ -116,3 +116,6 @@ spec:
 
         - name: "gitlab_token_ttl"
           value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_token_ttl}"
+
+        - name: "storage_namespace"
+          value: "${ARGOCD_ENV_utils_storage_namespace}"
