--- a/gitops/applications/base/deploy-env-onboard/kustomization.yaml
+++ b/gitops/applications/base/deploy-env-onboard/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - env-onboard-xplane-terraform.yaml
+  - env-buckets.yaml
