object storage endpoint

--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -406,8 +406,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -447,8 +447,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -488,8 +488,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -529,8 +529,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -570,8 +570,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -611,8 +611,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -652,8 +652,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -693,8 +693,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -730,7 +730,7 @@ spec:
            v4auth: true
            pathstyle: false
            region: ${ARGOCD_ENV_cloud_region}
-           regionendpoint: "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+           regionendpoint: "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
            accesskey: {{.username}}
            secretkey: {{.password}}
 ---
@@ -771,8 +771,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -812,8 +812,8 @@ spec:
           # The below settings are for S3 compatible endpoints
           #   See https://docs.gitlab.com/ee/administration/job_artifacts.html#s3-compatible-connection-settings
           aws_signature_version: 4
-          host: s3.amazonaws.com
-          endpoint:  "https://s3.${ARGOCD_ENV_cloud_region}.amazonaws.com"
+          host: ${ARGOCD_ENV_object_storage_endpoint}
+          endpoint:  "https://${ARGOCD_ENV_object_storage_regional_endpoint}"
           path_style: true
 ---
 apiVersion: external-secrets.io/v1beta1
