--- a/gitops/applications/base/gitlab/gitlab-values.yaml
+++ b/gitops/applications/base/gitlab/gitlab-values.yaml
@@ -1331,7 +1331,7 @@ gitlab-runner:
           Path = "gitlab-runner"
           Shared = true
           [runners.cache.s3]
-            ServerAddress = "s3.amazonaws.com"
+            ServerAddress = "${ARGOCD_ENV_object_storage_endpoint}"
             BucketName = "gitlab-runner-cache-${ARGOCD_ENV_cluster_name}"
             BucketLocation = "${ARGOCD_ENV_cloud_region}"
             Insecure = true
