--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -197,6 +197,13 @@ spec:
 
           - name: "storage_namespace"
             value: "${ARGOCD_ENV_utils_storage_namespace}"
+
+          - name: "object_storage_endpoint"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_endpoint}"
+
+          - name: "object_storage_regional_endpoint"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
+
     #main gitlab db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
