--- a/gitops/argo-apps/base/gitlab.yaml
+++ b/gitops/argo-apps/base/gitlab.yaml
@@ -119,3 +119,9 @@ spec:
 
         - name: "storage_namespace"
           value: "${ARGOCD_ENV_utils_storage_namespace}"
+
+        - name: "object_storage_endpoint"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_endpoint}"
+
+        - name: "object_storage_regional_endpoint"
+          value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
