--- a/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env/env-config-xplane-terraform.yaml
@@ -16,8 +16,8 @@ spec:
         value: https://zitadel.${ARGOCD_ENV_zitadel_dns_subdomain}
       - key: nexus_fqdn
         value: nexusproxy.${ARGOCD_ENV_nexus_dns_subdomain}
-      - key: ceph_obj_store_gw_fqdn
-        value: rook-ceph-bucket.${ARGOCD_ENV_ceph_dns_subdomain}
+      - key: obj_store_gw_fqdn
+        value: ${ARGOCD_ENV_object_storage_endpoint}
       - key: mimir_gw_fqdn
         value: "https://mimir.${ARGOCD_ENV_grafana_dns_subdomain}"
       - key: environment_list
@@ -72,7 +72,7 @@ spec:
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
   configuration: |
-    terraform { 
+    terraform {
         backend "kubernetes" {
           secret_suffix     = "providerconfig-gitlab-post-config"
           namespace         = "${ARGOCD_ENV_gitlab_namespace}"
@@ -84,7 +84,7 @@ spec:
             version = "~> 16.0"
           }
           vault = "${ARGOCD_ENV_vault_tf_provider_version}"
-          
+
           kubernetes = {
             source = "hashicorp/kubernetes"
             version = "2.31.0"
@@ -94,11 +94,11 @@ spec:
 
       variable "token" {
         type = string
-      }    
-      
+      }
+
       provider "vault" {
         address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
-        token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token 
+        token   = jsondecode(file("$${path.module}/vault-keys.json")).root_token
       }
 
       provider "gitlab" {
