--- a/gitops/applications/base/rook-ceph/ceph-objectstore-crs.yaml
+++ b/gitops/applications/base/rook-ceph/ceph-objectstore-crs.yaml
@@ -19,3 +19,6 @@ spec:
     sslCertificateRef: objectstore-internal-tls
     instances: 1
     priorityClassName: system-cluster-critical
+    rgwCommandFlags:
+      debug_ms: "5"
+      debug_rgw: "5"
