--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -299,3 +299,48 @@ capi_cluster_proxmox_worker_cpu: "'8'"
 capi_cluster_proxmox_worker_memory: "'16384'"
 capi_cluster_proxmox_worker_replicas: "'3'"
 capi_cluster_storage_name: "pve-sdb"
+##end capi
+
+# env_common_platform db settings
+env_common_platform_postgres_rdbms_provider: "private-dbaas"
+#env_common_platform db rds specific
+env_common_platform_rds_engine: "aurora-postgresql"
+env_common_platform_rds_engine_version: "'16'"
+env_common_platform_rds_replica_count: "'1'"
+env_common_platform_rds_instance_class: "db.t3.medium"
+env_common_platform_rds_storage_encrypted: "'true'"
+env_common_platform_rds_skip_final_snapshot: "'true'"
+env_common_platform_rds_postgres_storage_size: "'100'"
+env_common_platform_rds_storage_type: "io1"
+env_common_platform_rds_storage_iops: "'5000'"
+#env_common_platform db backup settings
+env_common_platform_db_backup_retention_period: "'1'"
+env_common_platform_db_preferred_backup_window: "07:00-09:00"
+#env_common_platform db percona specific
+env_common_platform_perc_postgres_replicas: "'1'"
+env_common_platform_perc_postgres_proxy_replicas: "'1'"
+env_common_platform_perc_postgres_storage_size: "10Gi"
+env_common_platform_perc_pgdb_helm_version: "2.4.0"
+## end of env_common_platform db settings
+
+# env_common_mojaloop db settings
+env_common_mojaloop_postgres_rdbms_provider: "private-dbaas"
+#env_common_mojaloop db rds specific
+env_common_mojaloop_rds_engine: "aurora-postgresql"
+env_common_mojaloop_rds_engine_version: "'16'"
+env_common_mojaloop_rds_replica_count: "'1'"
+env_common_mojaloop_rds_instance_class: "db.t3.medium"
+env_common_mojaloop_rds_storage_encrypted: "'true'"
+env_common_mojaloop_rds_skip_final_snapshot: "'true'"
+env_common_mojaloop_rds_postgres_storage_size: "'100'"
+env_common_mojaloop_rds_storage_type: "io1"
+env_common_mojaloop_rds_storage_iops: "'5000'"
+#env_common_mojaloop db backup settings
+env_common_mojaloop_db_backup_retention_period: "'1'"
+env_common_mojaloop_db_preferred_backup_window: "07:00-09:00"
+#env_common_mojaloop db percona specific
+env_common_mojaloop_perc_postgres_replicas: "'1'"
+env_common_mojaloop_perc_postgres_proxy_replicas: "'1'"
+env_common_mojaloop_perc_postgres_storage_size: "10Gi"
+env_common_mojaloop_perc_pgdb_helm_version: "2.4.0"
+## end of env_common_platform db settings
