--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-operator/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-operator/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-   - namespaces.yaml
-
+resources: []
 generatorOptions:
   disableNameSuffixHash: true
   behavior: merge
