rbac configmaps perms

--- a/gitops/applications/base/sc-storage/rbac.yaml
+++ b/gitops/applications/base/sc-storage/rbac.yaml
@@ -15,6 +15,9 @@ rules:
     resources: ["secrets"]
     verbs: ["create", "get", "list", "update", "patch", "delete"]
   - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["create", "get", "list", "update", "patch", "delete"]
+  - apiGroups: [""]
     resources: ["services"]
     verbs: ["get", "list"]
   - apiGroups: [""]
