--- a/gitops/argo-apps/base/storage-post-config.yaml
+++ b/gitops/argo-apps/base/storage-post-config.yaml
@@ -37,3 +37,7 @@ spec:
         env:
           - name: "storage_namespace"
             value: "${ARGOCD_ENV_utils_storage_namespace}"
+          - name: "block_storage_class_name"
+            value: "${ARGOCD_ENV_utils_storage_block_storage_class_name}"
+          - name: "fs_storage_class_name"
+            value: "${ARGOCD_ENV_utils_storage_private_cloud_provider_fs_storage_class_name}"
