update sc secret name

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/post-config/sync-ceph-secrets-job.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/post-config/sync-ceph-secrets-job.yaml
@@ -16,7 +16,7 @@ spec:
         - -c
         - |
           # Sync secrets
-          kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/config get secret ceph-external-cluster-secret -n rook-ceph -o yaml \
+          kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/config get secret rook-external-config -n rook-ceph -o yaml \
             | sed 's/namespace: rook-ceph$/namespace: ${ARGOCD_ENV_storage_namespace}/'  > /tmp/ceph-secrets.yaml && \
           kubectl --namespace=${ARGOCD_ENV_storage_namespace} apply -f /tmp/ceph-secrets.yaml
           # Sync cm
